--- a/harness/recaptcha_harness.html
+++ b/harness/recaptcha_harness.html
@@ -9,9 +9,12 @@
     <script>
         grecaptcha.ready(function() {
             grecaptcha.execute('6Lc670QgAAAAACRuVYmu7MkhUuC5Grp7s1l5IAF-', {action: 'test'}).then(function(token) {
-                // Add your logic to submit to your backend server here.
+	            document.getElementById('txtTokenValue').value = token;
             });
         });
     </script>
+    <div>
+        <textarea id="txtTokenValue">Loading token from Google... Please Stand By...</textarea>
+    </div>
 </body>
 </html>
