Fixed assertion/context subject.id issue.

--- a/harness/recaptcha_harness.html
+++ b/harness/recaptcha_harness.html
@@ -14,7 +14,8 @@
         });
     </script>
     <div>
-        <textarea id="txtTokenValue">Loading token from Google... Please Stand By...</textarea>
+        <textarea id="txtTokenValue">Loading token from Google... Please Stand By...</textarea><br />
+        <button id="btnTestReCaptcha">Test</button>
     </div>
 </body>
 </html>
