--- a/harness/index.html
+++ b/harness/index.html
@@ -19,20 +19,16 @@
     <p><textarea id="txtXHRResults">...Push Test to start...</textarea><br /></p>
 </div>
 <script>
-	let _xhr = new XMLHttpRequest();
-	_xhr.onload = (lxhr, lpenv) => {
-		if(lxhr.status >= 200 && lxhr.status < 300) {
-			const response = JSON.parse(lxhr.responseText);
-			document.getElementById('txtXHRResults').value = "OK";
-		}
-	};
-	_xhr.onerror = (lxhr, lpenv) => {
-		document.getElementById('txtXHRResults').value = "THERE WAS A HUGE PROBLEM.";
-	};
-
 	function testCaptchaPlugin(token) {
-		_xhr.open("POST", "https://celastrinajsweb.z13.web.core.windows.net");
-		_xhr.setRequestHeader('x-celastrinajs-captcha-token', document.getElementById('txtTokenValue').value);
+		let _xhr = new XMLHttpRequest();
+		_xhr.onload = function() {
+			if(this.status >= 200 && this.status < 300) {
+				const response = JSON.parse(this.responseText);
+			}
+			document.getElementById('txtXHRResults').value = this.responseText;
+		};
+		_xhr.open("POST", "https://celastrinajs.azurewebsites.net/api/HttpTrigger1?code=UcnCLE8PB8vqdMZsaWI23lbVGitqlX3cKEFe5VsiwuY94F8yaRYpqg==");
+		_xhr.setRequestHeader('x-celastrinajs-captcha-token', token);
 		_xhr.setRequestHeader('Content-Type', 'application/json');
 		_xhr.send(JSON.stringify({id: "991e7894-0b20-44dc-854a-89e04d9e64d2",
 			                      partition: "991e7894-0b20-44dc-854a-89e04d9e64d2"}));
